  (friebe)
- Added rdbms.finder.FinderMethod::getFinder() method
  (friebe)
- Added getInputStream() and getOutputStream() methods to io.File
  (friebe)
- Added getInputStream() and getOutputStream() methods to peer.Socket
  (friebe)
- Added possibility to pass an associative array to HTTP request params
  (friebe)

Bugfixes
~~~~~~~~
- Fixed XPath constructor to include XML declaration when creating XPath
  object from xml.Tree
  (hinckel, Christine Karch)


Version 5.7.4, released 2009-09-05
----------------------------------
SVN version: 13480

Heads up!
~~~~~~~~~
- Deprecated peer.ftp.server.FtpConnectionListener class
  http://news.xp-framework.net/article/309/2009/08/19/
  (friebe)
- Refactored rdbms.pgsql.PostgreSQLConnection class so it behaves in 
  line with other rdbms.DBConnection classes - this includes 
  behavorial changes visible to outside
  (kiesel)
- Made util.Locale fully qualified, to make XP forward compatible
  with PHP 5.3.0 with ext/intl enabled
  (kiesel)
- Changed "unittest" command to exit with non-zero exitcode if either no
  tests are found or any test fails
  (friebe)
- Changed ClassDoc::sourceFile() and PackageDoc::sourceFile() in 
  text.doclet to return io.File objects instead of strings
  (friebe)
- Refactored scriptlet.workflow.casters.ToValidXMLString into the
  checker scriptlet.workflow.checkers.WellformedXMLChecker
  (kiesel)

Features
~~~~~~~~
- Refactored DBConnection classes; streamline code and remove leftovers
  from PHP4 times
  (kiesel)
- Added optional parameter "file" to xp::gc() which will only clean up
  errors caused inside the given file (versus all errors)
  (friebe, kiesel)
- Added memory reporting methods to lang.Runtime class
  (friebe)
- Made timeouts during socket reads detectable by specialized exception
  peer.SocketTimeoutException
  http://news.xp-framework.net/article/308/2009/08/11
  (friebe, Rene Patzer)
- Added Console input stream (Console::$in)
  (friebe)